--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 .heading
 {
 font-size: 23px;
@@ -6,7 +5,7 @@ width: 100%;
 margin: 0px;
 }
 
-#status
+#status, #number_of_objects
 {
 font-size: 18px;
 }
@@ -20,4 +19,5 @@ background-position: center;
 canvas {
 box-shadow: 10px 10px 10px gray;
 border-radius: 10px;
+margin-top: 30px;
 }
